Revert changes to java 17